// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Card debe de mostrar la Card Personalizado 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;

exports[`Product Card debe incrementar el contador, 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    plus
  </button>
</div>
`;
